# NAI_Assistant

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml
browser-extension/NAIS2-Worker-Helper/: README.md  USER-GUIDE.txt  guide-actions.js  guide-bindings.js  guide-controller.js  guide-panel.js  guide-runtime.js  guide-selectors.js  guide-state.js  guide-steps.js  guide.js  manifest.json  popup.html  popup.js
docs/: cloud-setup.md  custom-worker-user-guide.md  features.md  i18n-architecture.md  user-share-message.txt
public/: splash.css
scripts/: convert_installer_assets.cjs  convert_installer_assets.py  convert_tags.cjs  generate-tag-categories.js  json_to_sqlite.cjs  json_to_sqlite.py  shard-tags.cjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: airdrop_server.rs  lib.rs
src-tauri/src/commands/: lan.rs  mod.rs  nai_api.rs  photoshop.rs  system.rs  tagger.rs
src/assets/: tag_categories.json
src/context/: SyncContext.tsx
src/hooks/: use-network-health.ts  use-scene-generation.ts  use-toast.ts  use-wildcard-sync.ts  useDeviceType.ts  useKeyboardShortcuts.ts  usePSIntegration.ts
src/i18n/: config.ts
src/layouts/: AdaptiveLayout.tsx
src/lib/: canvas-preview.ts  fragment-processor.ts  image-drop-utils.ts  image-format.ts  image-utils.ts  indexed-db.ts  ipc-timeout.ts  metadata-parser.ts  metadata-writer-webp.ts  metadata-writer.ts  motion.ts  utils.ts
src/pages/: MainPage.tsx
src/services/: artist-db.ts  cloud-pull-service.ts  preset-db.ts  (+8 more)
worker/: .dev.vars.example  package-lock.json  schema.sql  test-endpoints.js  wrangler.toml
worker-cloud-airdrop/: README.md  wrangler.toml
(+174 files in other folders)
